# winglib2

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PROJECT.txt  README.md
app/wl2/: CMakeLists.txt  main.cpp  static_module_metadata_check.cpp
cmake/: WL2CoreLibrary.cmake  WL2Dependencies.cmake  WL2Docs.cmake  WL2Examples.cmake  WL2Modules.cmake  WL2Options.cmake  WL2Packaging.cmake  WL2Resources.cmake  WL2TargetPath.cmake  WL2Testing.cmake  cmake_uninstall.cmake.in  debug.cmake  readProjectConfig.cmake  winglib2Config.cmake.in  winglib2InstalledUninstall.cmake.in  (+1 more)
examples/cpp/embedded/: CMakeLists.txt  main.cpp
examples/cpp/embedded/scripts/: main.js
examples/cpp/foundations/: CMakeLists.txt  main.cpp
examples/cpp/foundations/scripts/: config.json  main.js  worker.js
examples/cpp/resources/: CMakeLists.txt  main.cpp
examples/cpp/resources/files/assets/: skip.tmp
examples/cpp/resources/files/assets/nested/: info.txt  repeated.txt
examples/js/3d-dashboard/: CMakeLists.txt  README.md  main.cpp
examples/js/3d-dashboard/assets/: site.gltf
examples/js/3d-dashboard/scripts/: main.js
examples/js/3d-dashboard/ui/: app.slint
examples/js/curl-resources/: CMakeLists.txt  config.json  main.js  payload.txt
examples/js/fs-inspect/: CMakeLists.txt  main.js
examples/js/fs-inspect/data/: sample.txt
examples/js/hello/: CMakeLists.txt  hello.js
examples/js/resources/: CMakeLists.txt  resources.yml
examples/js/resources/files/: config.json  main.js
examples/js/test-scripts/: CMakeLists.txt  membus_select.js  resources.js
examples/js/thread-tree/: CMakeLists.txt  buffer-pipeline.js  membus-worker.js  request-reply.js  spawn.js
examples/modules/wl2_echo/: CMakeLists.txt  README.md  wl2.module.source.yml
examples/modules/wl2_echo/cmake/: options.cmake
examples/modules/wl2_echo/include/wl2_echo/: wl2_echo.h
examples/modules/wl2_echo/js/: main.js
examples/modules/wl2_echo/src/: wl2_echo.cpp
examples/modules/wl2_echo/test/: wl2_echo_tests.cpp
modules/wl2_3d/test/: CMakeLists.txt  camera_tests.cpp  gpu_probe.cpp  process_isolation_tests.cpp  wl2_3d_tests.cpp
modules/wl2_3d/test/fixtures/: tiny.gltf
modules/wl2_3d/test/js/: camera_timeline.test.js  content_assets.test.js  detections.test.js  dynamic_mesh.test.js  engine_core.test.js  hardening.test.js  rich_scene.test.js  synthetic_frame.test.js  ui_on_3d_roundtrip.test.js
modules/wl2_asio/: CMakeLists.txt  README.md  wl2.module.source.yml
modules/wl2_asio/cmake/: WL2Asio.cmake  options.cmake
modules/wl2_asio/docs/: api.md  design.md  security.md
modules/wl2_asio/examples/tcp-echo/: CMakeLists.txt  main.cpp
modules/wl2_asio/examples/tcp-echo/scripts/: main.js
modules/wl2_asio/include/wl2_asio/: wl2_asio.h
modules/wl2_asio/src/: wl2_asio.cpp
modules/wl2_asio/test/: CMakeLists.txt  wl2_asio_fixture.cpp
modules/wl2_asio/test/js/: permission_denied.test.js  tcp_echo.test.js  tcp_server.test.js
modules/wl2_curl/: CMakeLists.txt  wl2.module.source.yml
modules/wl2_curl/cmake/: WL2Curl.cmake  options.cmake
modules/wl2_curl/include/wl2_curl/: wl2_curl.h
modules/wl2_curl/src/: wl2_curl.cpp
modules/wl2_curl/test/: CMakeLists.txt  wl2_curl_fixture.cpp
modules/wl2_curl/test/js/: wl2_curl_smoke.js
modules/wl2_ffmpeg/: CMakeLists.txt  wl2.module.source.yml
modules/wl2_ffmpeg/cmake/: WL2FFmpeg.cmake  options.cmake
modules/wl2_ffmpeg/examples/replay-lab/: CMakeLists.txt  README.md  main.cpp
modules/wl2_ffmpeg/examples/replay-lab/fixtures/: README.md
modules/wl2_ffmpeg/examples/replay-lab/scripts/: main.js
modules/wl2_ffmpeg/examples/replay-lab/ui/: app.slint
modules/wl2_ffmpeg/include/wl2_ffmpeg/: wl2_ffmpeg.h
modules/wl2_ffmpeg/src/: wl2_ffmpeg.cpp
modules/wl2_ffmpeg/src/ffmpeg/: decoder.cpp  demuxer.cpp  evidence.cpp  filter.cpp  module_exports.cpp  module_internal.cpp  muxer.cpp  replay.cpp  types.cpp
modules/wl2_ffmpeg/test/: CMakeLists.txt  fetch-media.cmake  media.yml  wl2_ffmpeg_tests.cpp
modules/wl2_fs/: CMakeLists.txt  wl2.module.source.yml
modules/wl2_fs/cmake/: options.cmake
modules/wl2_fs/include/wl2_fs/: wl2_fs.h
modules/wl2_fs/src/: wl2_fs.cpp
modules/wl2_fs/test/: CMakeLists.txt  wl2_fs_tests.cpp
modules/wl2_membus/: CMakeLists.txt  wl2.module.source.yml
modules/wl2_membus/cmake/: options.cmake
modules/wl2_membus/include/wl2_membus/: wl2_membus.h
modules/wl2_membus/src/: wl2_membus.cpp
modules/wl2_slint/: CMakeLists.txt  README.md  wl2.module.source.yml
modules/wl2_slint/cmake/: WL2Nfd.cmake  WL2Slint.cmake  options.cmake
modules/wl2_slint/docs/: api.md  design.md  security.md
modules/wl2_slint/examples/counter/: CMakeLists.txt  README.md  main.cpp
modules/wl2_slint/examples/counter/scripts/: main.js
modules/wl2_slint/examples/counter/ui/: app.slint
modules/wl2_slint/examples/showcase/: CMakeLists.txt  README.md  main.cpp
modules/wl2_slint/examples/showcase/scripts/: main.js
modules/wl2_slint/examples/showcase/ui/: app.slint
modules/wl2_slint/include/wl2_slint/: wl2_slint.h
modules/wl2_slint/src/: slint_offscreen.h  slint_runtime.h  value_bridge.h  wl2_slint.cpp
modules/wl2_slint/test/: CMakeLists.txt  wl2_slint_tests.cpp
modules/wl2_slint/test/fixtures/: headless.slint  parts.slint
modules/wl2_slint/test/js/: callbacks.test.js  compile_file.test.js  compile_properties.test.js  offscreen_roundtrip.test.js  permission_denied.test.js  windowed_smoke.test.js
test/cmake/resource_conflict/: CMakeLists.txt  run.cmake
test/cmake/resource_conflict/files/: dup.txt
test/core/: CMakeLists.txt  app_store_tests.cpp  async_host_tests.cpp  async_integration_tests.cpp  buffer_tests.cpp  crash_fixture.cpp  dynamic_module_tests.cpp  membus_tests.cpp  module_deps_tests.cpp  module_requirements_tests.cpp  module_resolver_tests.cpp  module_store_tests.cpp  resource_tests.cpp  runtime_tests.cpp  script_thread_tests.cpp  thread_tree_tests.cpp
test/core/dynamic_fixtures/: dyn_abi2.cpp  dyn_bad_abi.cpp  dyn_bad_version.cpp  dyn_deps.cpp  dyn_good.cpp  dyn_no_getinfo.cpp  dyn_no_register.cpp
(+116 files in other folders)
